--- a/assets/less/screen.less
+++ b/assets/less/screen.less
@@ -15,6 +15,9 @@
 @import (once) 'utility/utility';
 
 // Components
+@import (optional) 'components/animations';
+@import (optional) 'components/forms';
+@import (optional) 'components/navigation';
+@import (optional) 'components/project';
 @import (optional) 'components/section';
 @import (optional) 'components/tables';
-@import (optional) 'components/forms';
