Tweaking base styles

--- a/assets/less/base/base.less
+++ b/assets/less/base/base.less
@@ -5,9 +5,11 @@
  */
 
 html {
-  font-family: sans-serif; /* 1 */
+  font-family: Oxygen, sans-serif; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  background-color: @color-neutral-darkest;
+  color: @color-white;
 }
 
 /**
@@ -16,7 +18,7 @@ html {
 
 body {
   margin: 0;
-  line-height: 1.5;
+  line-height: 1.45;
 }
 
 /**
