--- a/assets/less/base/text.less
+++ b/assets/less/base/text.less
@@ -25,10 +25,30 @@ dfn {
 
 // Address variable `h1` font-size and margin within `section` and `article`
 // contexts in Firefox 4+, Safari, and Chrome.
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
+h1, h2, h3, h4 {
+  font-weight: 300;
+  line-height: 1.2;
+  color: @color-primary;
 }
+
+h1 {
+  font-size: 3.157em;
+  text-align: center;
+}
+
+h2 {
+  font-size: 2.369em;
+}
+
+h3 {
+  font-size: 1.777em;
+}
+
+h4 {
+  font-size: 1.333em;
+}
+
+
 
 // Address styling not present in IE 8/9.
 mark {
@@ -37,8 +57,8 @@ mark {
 }
 
 // Address inconsistent and variable font size in all browsers.
-small {
-  font-size: 80%;
+small, .font_small {
+  font-size: 0.75em;
 }
 
 // Prevent `sub` and `sup` affecting `line-height` in all browsers.
