Tweaking project hover styling

--- a/assets/less/components/project.less
+++ b/assets/less/components/project.less
@@ -3,9 +3,15 @@
 }
 
 .project {
-	background-color: @color-primary-light;
+	background-color: @color-secondary-light;
 	color: @color-white;
 	text-align: center;
+	border-radius: 3px;
+	transition-duration: .2s;
+
+	&:hover {
+		background-color: @color-secondary;
+	}
 
 	a {
 		padding: @space @space;
@@ -16,7 +22,12 @@
 	}
 
 	.project-icon {
+		margin-top: @space;
 		transform: scale(1.5) translateY(2em);
+
+		svg {
+			fill: @color-secondary-dark;
+		}
 	}
 
 	.project-icon,
@@ -38,18 +49,14 @@
 
 	a:hover {
 		.project-icon {
-			transform: scale(1) translateY(0);
-			opacity: 0;
+			transform: scale(1.2) translateY(0);
 		}
+
 
 		.project-title,
 		.project-summary {
 			transform: translateY(0);
 			opacity: 1;
-		}
-
-		.project-summary {
-			transition-delay: .1s;
 		}
 	}
 }
