Styling contact page and forms

--- a/assets/less/components/section.less
+++ b/assets/less/components/section.less
@@ -102,3 +102,20 @@
   background-image: url(/assets/images/knitting.png);
   color: @color-secondary-lighter;
 }
+
+.section--contact {
+  background-color: @color-primary-light;
+  color: @color-white;
+  text-align: center;
+
+  form {
+    text-align: left;
+  }
+
+  h1 {
+    color: @color-primary-dark;
+  }
+  h2, h3, a {
+    color: inherit;
+  }
+}
