--- a/assets/less/screen.less
+++ b/assets/less/screen.less
@@ -17,6 +17,7 @@
 // Components
 @import (optional) 'components/animations';
 @import (optional) 'components/forms';
+@import (optional) 'components/messages';
 @import (optional) 'components/navigation';
 @import (optional) 'components/project';
 @import (optional) 'components/section';
