--- a/assets/less/components/forms.less
+++ b/assets/less/components/forms.less
@@ -6,7 +6,7 @@
 	}
 
 	legend {
-		
+
 	}
 }
 
@@ -15,27 +15,26 @@ button,
 .button,
 .btn {
 	display: inline-block;
-  padding: 5px 10px;
+  padding: @space-sm @space-lg;
   margin-bottom: 0;
   font-size: 1em;
-  line-height: 1.2;
+  min-height: 3em;
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
   cursor: pointer;
   user-select: none;
-  background: none;
-  border: 1px solid @color-neutral-light;
-  box-shadow: 0 1px 1px rgba(0,0,0,.075);
+  background: @color-primary;
+  border: 1px solid transparent;
+  border-radius: 3px;
 	transition: all .2s;
 	outline: none;
 
   &:hover,
   &:focus {
-  	background-color: @color-primary;
-  	border-color: @color-primary;
+  	background-color: @color-primary-dark;
+  	border-color: @color-primary-lighter;
   	color: contrast(@color-primary);
-  	box-shadow: 0 1px 3px fade(@color-primary, 25%);
   }
 }
 
@@ -63,8 +62,12 @@ button,
   }
 }
 
-.form-inputs {
-	input[type='text'], 
+.form-input {
+	margin-bottom: @space;
+	background-color: @color-primary-light;
+  color: @color-white;
+
+	input[type='text'],
 	input[type='search'],
 	input[type='tel'],
 	input[type='url'],
@@ -78,14 +81,26 @@ button,
 		display: block;
 	  width: 100%;
 	  padding: 5px 10px;
-	  border: 1px solid @color-neutral-light;
-	  box-shadow: inset 0 1px 1px fade(@color-neutral-darkest, 15%);
-	  transition: border-color .2s, box-shadow .2s;
+	  min-height: 3em;
+	  border: 1px solid transparent;
+	  background-color: darken(@color-primary-light, 8%);
+	  color: @color-white;
+	  font-weight: bold;
+	  font-size: 1.2em;
+	  transition-duration: .2s;
+		border-radius: 3px;
 
 	  &:focus {
-	  	border-color: @color-primary;
-	  	box-shadow: 0 1px 3px fade(@color-primary, 25%);
+	  	background-color: darken(@color-primary-light, 10%);
+	  	border: 1px solid @color-primary-lighter;
+	  	color: darken(@color-primary-darker, 5%);
 			outline: 0;
 	  }
 	}
+}
+
+.formerror {
+	background: fade(@color-primary-darker, 80%);
+	padding: .2em @space-sm;
+	display: inline-block;
 }
