--- a/assets/less/components/animations.less
+++ b/assets/less/components/animations.less
@@ -3,15 +3,18 @@
 		transform: translateX(150px);
 		opacity: 0;
 	}
-	59% {
+	40% {
 		transform: translateX(150px);
 		opacity: 0;
 	}
-	60% {
+	40% {
 		transform: translateX(-30px);
 	}
+	60% {
+		transform: translateX(15px);
+	}
 	80% {
-		transform: translateX(10px);
+		transform: translateX(-6px);
 	}
 	100% {
 		transform: translateX(0);
@@ -24,15 +27,18 @@
 		transform: translateX(-150px);
 		opacity: 0;
 	}
-	59% {
+	40% {
 		transform: translateX(-150px);
 		opacity: 0;
 	}
-	60% {
+	40% {
 		transform: translateX(30px);
 	}
+	60% {
+		transform: translateX(-15px);
+	}
 	80% {
-		transform: translateX(-10px);
+		transform: translateX(6px);
 	}
 	100% {
 		transform: translateX(0);
