--- a/assets/less/screen.less
+++ b/assets/less/screen.less
@@ -19,6 +19,7 @@
 @import (optional) 'components/forms';
 @import (optional) 'components/messages';
 @import (optional) 'components/navigation';
+@import (optional) 'components/post';
 @import (optional) 'components/project';
 @import (optional) 'components/section';
 @import (optional) 'components/tables';
