--- a/assets/less/components/section.less
+++ b/assets/less/components/section.less
@@ -16,6 +16,11 @@
 	  }
   }
 
+  &-title {
+    margin-bottom: @space-xl;
+    text-align: center;
+  }
+
   &--tall &-inner {
     padding-top: @space-lg;
     padding-bottom: @space-lg;
@@ -97,11 +102,8 @@
   }
 }
 
-.section--words,
 .section--projects {
   .section-title {
-    text-align: center;
-
     a {
       text-decoration: none;
     }
@@ -113,8 +115,23 @@
   background-image: url(/assets/images/inflicted.png);
   color: @color-white;
 
-  h2, h3, a {
-    color: @color-secondary-lighter;
+  .section-title {
+    color: @color-secondary-light;
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+  }
+
+  .post-title {
+    border: none;
+
+    a {
+      &:hover {
+        color: @color-secondary-light;
+      }
+    }
   }
 }
 
@@ -125,11 +142,6 @@
 
   .section-inner {
     max-width: @mq-lg-width;
-  }
-
-  h2 {
-    text-align: center;
-    margin-bottom: @space-lg;
   }
 
   h2, h3, h4 {
