Styling search and pagination

--- a/assets/less/screen.less
+++ b/assets/less/screen.less
@@ -19,7 +19,9 @@
 @import (optional) 'components/forms';
 @import (optional) 'components/messages';
 @import (optional) 'components/navigation';
+@import (optional) 'components/pagination';
 @import (optional) 'components/post';
 @import (optional) 'components/project';
+@import (optional) 'components/search';
 @import (optional) 'components/section';
 @import (optional) 'components/tables';
