Styling music and search

--- a/assets/less/base/forms.less
+++ b/assets/less/base/forms.less
@@ -45,6 +45,7 @@ input[type="submit"] {
 button[disabled],
 html input[disabled] {
   cursor: default;
+  opacity: .5;
 }
 
 // Remove inner padding and border in Firefox 4+.
