--- a/assets/less/screen.less
+++ b/assets/less/screen.less
@@ -18,10 +18,12 @@
 @import (optional) 'components/animations';
 @import (optional) 'components/forms';
 @import (optional) 'components/messages';
+@import (optional) 'components/music';
 @import (optional) 'components/navigation';
 @import (optional) 'components/pagination';
 @import (optional) 'components/post';
 @import (optional) 'components/project';
 @import (optional) 'components/search';
 @import (optional) 'components/section';
+@import (optional) 'components/sitemap';
 @import (optional) 'components/tables';
