Updating the appreciate functionality

--- a/assets/less/components/animations.less
+++ b/assets/less/components/animations.less
@@ -45,3 +45,22 @@
 		opacity: 1;
 	}
 }
+
+@keyframes appreciate-text {
+  0% {
+  	opacity: 0;
+    transform: translateX(-50%);
+  }
+  20% {
+  	opacity: 1;
+  	transform: translateX(-50%) translateY(-60px);
+  }
+  80% {
+  	opacity: 1;
+  	transform: translateX(-50%) translateY(-60px);
+  }
+  100% {
+  	opacity: 0;
+    transform: translateX(-50%) translateY(-60px);
+  }
+}
