--- a/assets/less/screen.less
+++ b/assets/less/screen.less
@@ -16,6 +16,7 @@
 
 // Components
 @import (optional) 'components/animations';
+@import (optional) 'components/appreciate';
 @import (optional) 'components/forms';
 @import (optional) 'components/messages';
 @import (optional) 'components/music';
