--- a/assets/less/config.less
+++ b/assets/less/config.less
@@ -32,10 +32,10 @@
 @color-primary-lighter: #50C9FD;
 @color-primary-light: #2584AB;
 @color-primary: #214D5E;
-@color-primary-dark: #2D3E45;
+@color-primary-dark: #183844;
 @color-primary-darker: #1B2529;
 
-@color-secondary-lighter: #89D3D4;
+@color-secondary-lighter: #9BD3D4;
 @color-secondary-light: #419E9E;
 @color-secondary: #297575;
 @color-secondary-dark: #174242;
