--- a/assets/less/components/section.less
+++ b/assets/less/components/section.less
@@ -39,7 +39,7 @@
 // Header
 .section--header {
   &:extend(.u-group all);
-  background-color: @color-primary-darker;
+  background-color: @color-primary-dark;
   color: @color-white;
   text-align: center;
 
@@ -77,7 +77,7 @@
   }
 
   a {
-    color: @color-primary-light;
+    color: @color-secondary-light;
   }
 }
 
@@ -111,30 +111,26 @@
 }
 
 .section--words {
-  background-color: @color-primary-dark;
-  background-image: url(/assets/images/inflicted.png);
-  color: @color-white;
+  background-color: @color-secondary-lighter;
+  background-image: url(/assets/images/knitting.png);
+  color: @color-secondary-dark;
 
-  .section-title {
-    color: @color-secondary-light;
+  a {
+    color: @color-secondary;
+    text-decoration: none;
 
-    a {
-      color: inherit;
-      text-decoration: none;
+    &:hover {
+      color: @color-secondary-darker;
     }
   }
 
-  .post-title {
-    a {
-      &:hover {
-        color: @color-secondary-light;
-      }
-    }
+  .post-date {
+    color: @color-secondary;
   }
 }
 
 .section--experience {
-  background-color: lighten(@color-secondary, 5%);
+  background-color: @color-secondary-light;
   background-image: url(/assets/images/knitting.png);
   color: @color-white;
 
