Optimising JS splitting music into it's own JS file

--- a/assets/less/screen.less
+++ b/assets/less/screen.less
@@ -1,5 +1,5 @@
 // config
-@import (once) 'config';
+@import (reference) 'config';
 
 // Base
 @import (once) 'base/base';
@@ -14,17 +14,16 @@
 @import (once) 'utility/grid';
 @import (once) 'utility/utility';
 
+@import (once) 'components/section';
 // Components
-@import (optional) 'components/animations';
-@import (optional) 'components/appreciate';
-@import (optional) 'components/forms';
-@import (optional) 'components/messages';
-@import (optional) 'components/music';
-@import (optional) 'components/navigation';
-@import (optional) 'components/pagination';
-@import (optional) 'components/post';
-@import (optional) 'components/project';
-@import (optional) 'components/search';
-@import (optional) 'components/section';
-@import (optional) 'components/sitemap';
-@import (optional) 'components/tables';
+@import (once) 'components/animations';
+@import (once) 'components/appreciate';
+@import (once) 'components/forms';
+@import (once) 'components/messages';
+@import (once) 'components/music';
+@import (once) 'components/navigation';
+@import (once) 'components/pagination';
+@import (once) 'components/post';
+@import (once) 'components/project';
+@import (once) 'components/search';
+@import (once) 'components/sitemap';
