Fixing issue with music links

--- a/assets/less/components/music.less
+++ b/assets/less/components/music.less
@@ -9,16 +9,15 @@
 
 	.track {
 		&:after {
+      display: none;
 	    content: '';
 	    position: absolute;
 	    top: 0;
 	    right: 0;
 	    bottom: 0;
 	    left: 0;
-	    transition: opacity .3s;
 	    background-color: fade(@color-primary-light, 70%);
 	    z-index: 100;
-	    opacity: 0;
 	  }
 
 	  &:after {
@@ -30,7 +29,7 @@
 
 	&.loading {
 		.track:after {
-			opacity: 1;
+			display: block;
 		}
 	}
 
