Adding an IE stylesheet

--- a/assets/less/screen.less
+++ b/assets/less/screen.less
@@ -11,6 +11,7 @@
 @import (once) 'base/text';
 
 // Utility
+@import (once, reference) 'utility/size';
 @import (once) 'utility/grid';
 @import (once) 'utility/utility';
 
