Small style fixes

--- a/assets/less/components/animations.less
+++ b/assets/less/components/animations.less
@@ -46,6 +46,21 @@
 	}
 }
 
+@keyframes intro {
+	0% {
+		opacity: 0;
+		transform: translateY(-2em);
+	}
+	40% {
+		opacity: 0;
+		transform: translateY(-2em);
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
 @keyframes appreciate-text {
   0% {
   	opacity: 0;
