Removing fonts, styling social

--- a/assets/less/screen.less
+++ b/assets/less/screen.less
@@ -3,7 +3,6 @@
 
 // Base
 @import (once) 'base/base';
-@import (once) 'base/fonts';
 @import (once) 'base/forms';
 @import (once) 'base/links';
 @import (once) 'base/media';
@@ -15,8 +14,8 @@
 @import (once) 'utility/grid';
 @import (once) 'utility/utility';
 
-@import (once) 'components/section';
 // Components
+@import (once) 'components/section';
 @import (once) 'components/animations';
 @import (once) 'components/appreciate';
 @import (once) 'components/forms';
@@ -28,3 +27,4 @@
 @import (once) 'components/project';
 @import (once) 'components/search';
 @import (once) 'components/sitemap';
+@import (once) 'components/social';
