--- a/assets/less/components/section.less
+++ b/assets/less/components/section.less
@@ -113,6 +113,12 @@
       text-decoration: none;
     }
   }
+
+  .page-projects & {
+    .section-inner {
+      padding-top: 0;
+    }
+  }
 }
 
 .section--words {
