--- a/assets/less/utility/utility.less
+++ b/assets/less/utility/utility.less
@@ -24,14 +24,11 @@
 
 // Hide only visually, but have it available for screen readers:
 .u-visuallyhidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
   position: absolute;
-  width: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px; width: 1px;
+  margin: -1px; padding: 0; border: 0;
 
 	// Extends the .visuallyhidden class to allow the element
 	// to be focusable when navigated to via the keyboard:
