Optimising css - removing unused styles

--- a/assets/less/base/text.less
+++ b/assets/less/base/text.less
@@ -7,20 +7,10 @@ table, fieldset, figure, pre {
   margin-bottom: @space;
 }
 
-// Address styling not present in IE 8/9/10/11, Safari, and Chrome.
-abbr[title] {
-  border-bottom: 1px dotted;
-}
-
 // Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
 b,
 strong {
   font-weight: bold;
-}
-
-// Address styling not present in Safari and Chrome.
-dfn {
-  font-style: italic;
 }
 
 // Address variable `h1` font-size and margin within `section` and `article`
@@ -48,34 +38,9 @@ h4 {
   font-size: 1.333em;
 }
 
-
-
-// Address styling not present in IE 8/9.
-mark {
-  background: #ff0;
-  color: #000;
-}
-
 // Address inconsistent and variable font size in all browsers.
 small, .font_small {
   font-size: 0.75em;
-}
-
-// Prevent `sub` and `sup` affecting `line-height` in all browsers.
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sup {
-  top: -0.5em;
-}
-
-sub {
-  bottom: -0.25em;
 }
 
 // Address differences between Firefox and other browsers.
@@ -92,9 +57,7 @@ pre {
 
 // Address odd `em`-unit font size rendering in all browsers.
 code,
-kbd,
-pre,
-samp {
+pre {
   font-family: monospace, monospace;
   font-size: 1em;
 }
