--- a/assets/less/utility/utility.less
+++ b/assets/less/utility/utility.less
@@ -4,18 +4,18 @@
 }
 
 // Push
-.u-push(@a, @b) when not (@a > @b) {
-	@push: (100/@b)*@a;
-	position: relative;
-	left: ~"@{push}%";
-}
+// .u-push(@a, @b) when not (@a > @b) {
+// 	@push: (100/@b)*@a;
+// 	position: relative;
+// 	left: ~"@{push}%";
+// }
 
 //Pull
-.u-pull(@a, @b) when not (@a > @b) {
-	@push: (100/@b)*@a;
-	position: relative;
-	left: ~"-@{push}%";
-}
+// .u-pull(@a, @b) when not (@a > @b) {
+// 	@push: (100/@b)*@a;
+// 	position: relative;
+// 	left: ~"-@{push}%";
+// }
 
 // Hide visually and from screen readers:
 .u-hidden {
@@ -32,22 +32,22 @@
 
 	// Extends the .visuallyhidden class to allow the element
 	// to be focusable when navigated to via the keyboard:
-  &.focusable {
-  	&:active, &:focus {
-  		clip: auto;
-			height: auto;
-			margin: 0;
-			overflow: visible;
-			position: static;
-			width: auto;
-  	}
-  }
+  // &.focusable {
+  // 	&:active, &:focus {
+  // 		clip: auto;
+		// 	height: auto;
+		// 	margin: 0;
+		// 	overflow: visible;
+		// 	position: static;
+		// 	width: auto;
+  // 	}
+  // }
 }
 
 // Hide visually and from screen readers, but maintain layout
-.u-invisible {
-  visibility: hidden;
-}
+// .u-invisible {
+//   visibility: hidden;
+// }
 
 // Clearfix: contain floats
 .u-group:after {
