Adding styling for work content

--- a/assets/less/screen.less
+++ b/assets/less/screen.less
@@ -28,3 +28,4 @@
 @import (once) 'components/search';
 @import (once) 'components/sitemap';
 @import (once) 'components/social';
+@import (once) 'components/work';
