Adding a work section to the homepage

--- a/assets/less/components/work.less
+++ b/assets/less/components/work.less
@@ -4,6 +4,18 @@
 	}
 }
 
+.section--workHome {
+	.cta--work {
+		text-align: center;
+		margin: @space 0;
+		font-size: 1.2em;
+
+		a {
+			text-decoration: none;
+		}
+	}
+}
+
 .section--workHero {
 	background-color: @color-neutral-lighter;
 
