Adding work and projects to the homepage

--- a/assets/less/components/project.less
+++ b/assets/less/components/project.less
@@ -16,7 +16,7 @@
 		display: block;
 
 		@media @mq-md {
-			min-height: 15em;
+			min-height: 16em;
 		}
 	}
 
@@ -65,4 +65,8 @@
 			opacity: 1;
 		}
 	}
+}
+
+.section.section--projectTeaser {
+	background-color: @color-secondary-lighter;
 }
