--- a/assets/less/components/work.less
+++ b/assets/less/components/work.less
@@ -4,16 +4,8 @@
 	}
 }
 
-.section--workHome {
-	.cta--work {
-		text-align: center;
-		margin: @space 0;
-		font-size: 1.2em;
+.section--workTeaser {
 
-		a {
-			text-decoration: none;
-		}
-	}
 }
 
 .section--workHero {
