--- a/assets/less/screen.less
+++ b/assets/less/screen.less
@@ -15,9 +15,9 @@
 @import (once) 'utility/utility';
 
 // Components
-@import (once) 'components/section';
 @import (once) 'components/animations';
 @import (once) 'components/appreciate';
+@import (once) 'components/cta';
 @import (once) 'components/forms';
 @import (once) 'components/messages';
 @import (once) 'components/music';
@@ -26,6 +26,7 @@
 @import (once) 'components/post';
 @import (once) 'components/project';
 @import (once) 'components/search';
+@import (once) 'components/section';
 @import (once) 'components/sitemap';
 @import (once) 'components/social';
 @import (once) 'components/work';
